package proto_ff;

import "yd_fieldoptions.proto";


message E_PetDisplayMaterialDesc
{
	optional int32 m_exp = 1[(yd_fieldoptions.field_cname) = "经验值"];
	optional int64 m_id = 2[(yd_fieldoptions.field_cname) = "ID"];
}

message E_PetDisplay
{
	optional int64 m_id = 1[(yd_fieldoptions.field_cname) = "外观ID"];
	optional string m_name = 2[(yd_fieldoptions.field_cname) = "名字", (yd_fieldoptions.field_bufsize) = 64];
	optional int32 m_quality = 3[(yd_fieldoptions.field_cname) = "宠物品质"];
	optional int32 m_isstar = 4[(yd_fieldoptions.field_cname) = "是否可升星"];
	optional string m_grade = 5[(yd_fieldoptions.field_cname) = "评级", (yd_fieldoptions.field_bufsize) = 64];
	optional int64 m_monsterid = 6[(yd_fieldoptions.field_cname) = "怪物表ID"];
	optional int32 m_activeskillid = 7[(yd_fieldoptions.field_cname) = "主动技能"];
	optional string m_exclusiveskillid = 8[(yd_fieldoptions.field_cname) = "专属技能", (yd_fieldoptions.field_bufsize) = 64];
	optional string m_passiveskillid = 9[(yd_fieldoptions.field_cname) = "被动技能", (yd_fieldoptions.field_bufsize) = 64];
	optional int32 m_activeattribute = 10[(yd_fieldoptions.field_cname) = "初始获得属性模板"];
	optional int32 m_growatt = 11[(yd_fieldoptions.field_cname) = "升级属性模板"];
	optional float m_activeparama = 12[(yd_fieldoptions.field_cname) = "初值值系数"];
	optional float m_growattparama = 13[(yd_fieldoptions.field_cname) = "升级属性系数"];
	optional float m_growstandarda = 14[(yd_fieldoptions.field_cname) = "标准值系数A"];
	optional float m_growstandardb = 15[(yd_fieldoptions.field_cname) = "标准值系数B"];
	optional float m_growstandard = 16[(yd_fieldoptions.field_cname) = "资质标准值"];
	optional float m_growmin = 17[(yd_fieldoptions.field_cname) = "初始资质下限"];
	optional float m_growmax = 18[(yd_fieldoptions.field_cname) = "初始资质上限"];
	optional float m_growstar = 19[(yd_fieldoptions.field_cname) = "升星资质提升系数"];
	optional int32 m_advanceattribute = 20[(yd_fieldoptions.field_cname) = "进阶值模板"];
	optional int32 m_advancetype = 21[(yd_fieldoptions.field_cname) = "进阶类型"];
	optional string m_pettagskill = 22[(yd_fieldoptions.field_cname) = "神宠技能", (yd_fieldoptions.field_bufsize) = 64];
	optional int32 m_starattribute = 23[(yd_fieldoptions.field_cname) = "升星属性模板"];
	optional int32 m_starpercent = 24[(yd_fieldoptions.field_cname) = "升星属性加成"];
	optional int32 m_starllimit = 25[(yd_fieldoptions.field_cname) = "升星上限"];
	optional int64 m_staritem = 26[(yd_fieldoptions.field_cname) = "升星道具"];
	optional string m_starnum = 27[(yd_fieldoptions.field_cname) = "升星道具数量", (yd_fieldoptions.field_bufsize) = 64];
	optional int64 m_starpetid = 28[(yd_fieldoptions.field_cname) = "升星宠物ID"];
	optional string m_starpetnum = 29[(yd_fieldoptions.field_cname) = "升星宠物数量", (yd_fieldoptions.field_bufsize) = 64];
	optional int32 m_weapon = 30[(yd_fieldoptions.field_cname) = "专属武器"];
	optional int64 m_upattributeid = 31[(yd_fieldoptions.field_cname) = "升星属性组ID"];
	optional int32 m_fettersid = 32[(yd_fieldoptions.field_cname) = "羁绊ID"];
	optional string m_suit = 33[(yd_fieldoptions.field_cname) = "套装", (yd_fieldoptions.field_bufsize) = 64];
	repeated E_PetDisplayMaterialDesc m_material = 34[(yd_fieldoptions.field_cname) = "升级材料", (yd_fieldoptions.field_arysize) = 3];
}


message Sheet_PetDisplay
{
	repeated E_PetDisplay E_PetDisplay_List = 1[(yd_fieldoptions.field_arysize)=64];
}

message E_PetAttributetpyeAttributeDesc
{
	optional int32 m_value = 1[(yd_fieldoptions.field_cname) = "值"];
	optional int32 m_type = 2[(yd_fieldoptions.field_cname) = "ID"];
}

message E_PetAttributetpye
{
	optional int64 m_id = 1[(yd_fieldoptions.field_cname) = "id"];
	optional int32 m_tpye = 2[(yd_fieldoptions.field_cname) = "属性类型"];
	repeated E_PetAttributetpyeAttributeDesc m_attribute = 3[(yd_fieldoptions.field_cname) = "基础属性", (yd_fieldoptions.field_arysize) = 6];
}


message Sheet_PetAttributetpye
{
	repeated E_PetAttributetpye E_PetAttributetpye_List = 1[(yd_fieldoptions.field_arysize)=128];
}

message E_PetLvexp
{
	optional int32 m_id = 1[(yd_fieldoptions.field_cname) = "等级"];
	optional int64 m_exp = 2[(yd_fieldoptions.field_cname) = "升级经验"];
}


message Sheet_PetLvexp
{
	repeated E_PetLvexp E_PetLvexp_List = 1[(yd_fieldoptions.field_arysize)=512];
}

message E_PetAdvancelvAdvanceDesc
{
	optional float m_param = 1[(yd_fieldoptions.field_cname) = "系数"];
	optional int32 m_type = 2[(yd_fieldoptions.field_cname) = "类型"];
}

message E_PetAdvancelv
{
	optional int32 m_id = 1[(yd_fieldoptions.field_cname) = "等级"];
	optional int32 m_advanceitem = 2[(yd_fieldoptions.field_cname) = "进阶消耗道具"];
	optional int32 m_advancenum = 3[(yd_fieldoptions.field_cname) = "消耗数量"];
	repeated E_PetAdvancelvAdvanceDesc m_advance = 4[(yd_fieldoptions.field_cname) = "进阶", (yd_fieldoptions.field_arysize) = 2];
}


message Sheet_PetAdvancelv
{
	repeated E_PetAdvancelv E_PetAdvancelv_List = 1[(yd_fieldoptions.field_arysize)=128];
}

message E_PetStarupUpattributeDesc
{
	optional int32 m_value = 1[(yd_fieldoptions.field_cname) = "值"];
	optional int32 m_type = 2[(yd_fieldoptions.field_cname) = "ID"];
}

message E_PetStarup
{
	optional int32 m_id = 1[(yd_fieldoptions.field_cname) = "唯一ID"];
	optional int64 m_upattributeid = 2[(yd_fieldoptions.field_cname) = "升星属性组ID"];
	optional int32 m_starid = 3[(yd_fieldoptions.field_cname) = "星级"];
	optional int32 m_skillid = 4[(yd_fieldoptions.field_cname) = "技能id"];
	optional int32 m_activeskillidlv = 5[(yd_fieldoptions.field_cname) = "主动技能等级"];
	repeated E_PetStarupUpattributeDesc m_upattribute = 6[(yd_fieldoptions.field_cname) = "激活属性", (yd_fieldoptions.field_arysize) = 6];
}


message Sheet_PetStarup
{
	repeated E_PetStarup E_PetStarup_List = 1[(yd_fieldoptions.field_arysize)=64];
}

message E_PetEggPetDesc
{
	optional int32 m_rand = 1[(yd_fieldoptions.field_cname) = "概率"];
	optional int32 m_id = 2[(yd_fieldoptions.field_cname) = "ID"];
}

message E_PetEgg
{
	optional int32 m_id = 1[(yd_fieldoptions.field_cname) = "宠物蛋道具ID"];
	optional int32 m_time = 2[(yd_fieldoptions.field_cname) = "孵化时间"];
	repeated E_PetEggPetDesc m_pet = 3[(yd_fieldoptions.field_cname) = "宠物", (yd_fieldoptions.field_arysize) = 13];
}


message Sheet_PetEgg
{
	repeated E_PetEgg E_PetEgg_List = 1[(yd_fieldoptions.field_arysize)=64];
}

message E_PetDecomposeDecomposeDesc
{
	optional int32 m_boxid = 1[(yd_fieldoptions.field_cname) = "boxID"];
	optional int32 m_type = 2[(yd_fieldoptions.field_cname) = "type"];
}

message E_PetDecompose
{
	optional int32 m_id = 1[(yd_fieldoptions.field_cname) = "id"];
	optional int32 m_quality = 2[(yd_fieldoptions.field_cname) = "宠物品质"];
	repeated E_PetDecomposeDecomposeDesc m_decompose = 3[(yd_fieldoptions.field_cname) = "分解类型", (yd_fieldoptions.field_arysize) = 4];
}


message Sheet_PetDecompose
{
	repeated E_PetDecompose E_PetDecompose_List = 1[(yd_fieldoptions.field_arysize)=8];
}

message E_PetFettersAttributeDesc
{
	optional int32 m_value = 1[(yd_fieldoptions.field_cname) = "值"];
	optional int32 m_type = 2[(yd_fieldoptions.field_cname) = "ID"];
}

message E_PetFetters
{
	optional int32 m_id = 1[(yd_fieldoptions.field_cname) = "id"];
	optional int32 m_quality = 2[(yd_fieldoptions.field_cname) = "羁绊品质"];
	repeated int32 m_petid = 3[(yd_fieldoptions.field_cname) = "羁绊宠物ID", (yd_fieldoptions.field_arysize) = 3];
	repeated E_PetFettersAttributeDesc m_attribute = 4[(yd_fieldoptions.field_cname) = "基础属性", (yd_fieldoptions.field_arysize) = 7];
	repeated int32 m_atctive_skillid = 5[(yd_fieldoptions.field_cname) = "激活技能", (yd_fieldoptions.field_arysize) = 4];
}


message Sheet_PetFetters
{
	repeated E_PetFetters E_PetFetters_List = 1[(yd_fieldoptions.field_arysize)=8];
}

message E_PetPetequipActDesc
{
	optional int32 m_mun = 1[(yd_fieldoptions.field_cname) = "数量"];
	optional int32 m_time = 2[(yd_fieldoptions.field_cname) = "材料"];
}

message E_PetPetequip
{
	optional int32 m_pet = 1[(yd_fieldoptions.field_cname) = "对应宠物"];
	optional int32 m_orderid = 2[(yd_fieldoptions.field_cname) = "排序Id"];
	optional string m_name = 3[(yd_fieldoptions.field_cname) = "备注", (yd_fieldoptions.field_bufsize) = 64];
	optional int32 m_qeuiditem = 4[(yd_fieldoptions.field_cname) = "专属物品"];
	optional int32 m_equipqualitymin = 5[(yd_fieldoptions.field_cname) = "初始品质"];
	optional int32 m_equipmodelid = 6[(yd_fieldoptions.field_cname) = "模型资源Id"];
	optional int32 m_forging = 7[(yd_fieldoptions.field_cname) = "锻造类型"];
	optional int32 m_star = 8[(yd_fieldoptions.field_cname) = "升星类型"];
	optional string m_skill = 9[(yd_fieldoptions.field_cname) = "天赋技能", (yd_fieldoptions.field_bufsize) = 64];
	repeated E_PetPetequipActDesc m_act = 10[(yd_fieldoptions.field_cname) = "激活", (yd_fieldoptions.field_arysize) = 2];
}


message Sheet_PetPetequip
{
	repeated E_PetPetequip E_PetPetequip_List = 1[(yd_fieldoptions.field_arysize)=32];
}

message E_PetEquipvalueAttributeDesc
{
	optional int32 m_value = 1[(yd_fieldoptions.field_cname) = "值"];
	optional int32 m_type = 2[(yd_fieldoptions.field_cname) = ""];
}

message E_PetEquipvalueExtraDesc
{
	optional int32 m_value = 1[(yd_fieldoptions.field_cname) = "值"];
	optional int32 m_type = 2[(yd_fieldoptions.field_cname) = ""];
}

message E_PetEquipvalue
{
	optional int32 m_id = 1[(yd_fieldoptions.field_cname) = "id"];
	optional int32 m_equipvalue = 2[(yd_fieldoptions.field_cname) = "属性类型"];
	optional int32 m_equiplv = 3[(yd_fieldoptions.field_cname) = "阶数"];
	optional int32 m_item = 4[(yd_fieldoptions.field_cname) = "阶数物品"];
	optional int32 m_winprob = 5[(yd_fieldoptions.field_cname) = "锻造成功概率"];
	optional int32 m_equipitem = 6[(yd_fieldoptions.field_cname) = "道具消耗"];
	optional int32 m_equipmun = 7[(yd_fieldoptions.field_cname) = "消耗数量"];
	optional int32 m_failmax = 8[(yd_fieldoptions.field_cname) = "锻造保底次数"];
	repeated E_PetEquipvalueAttributeDesc m_attribute = 9[(yd_fieldoptions.field_cname) = "属性", (yd_fieldoptions.field_arysize) = 5];
	repeated E_PetEquipvalueExtraDesc m_extra = 10[(yd_fieldoptions.field_cname) = "额外属性", (yd_fieldoptions.field_arysize) = 5];
}


message Sheet_PetEquipvalue
{
	repeated E_PetEquipvalue E_PetEquipvalue_List = 1[(yd_fieldoptions.field_arysize)=1024];
}

message E_PetStarvalueAttributeDesc
{
	optional int32 m_value = 1[(yd_fieldoptions.field_cname) = "值"];
	optional int32 m_type = 2[(yd_fieldoptions.field_cname) = ""];
}

message E_PetStarvalueEquipDesc
{
	optional int32 m_mun = 1[(yd_fieldoptions.field_cname) = "数量"];
	optional int32 m_item = 2[(yd_fieldoptions.field_cname) = "消耗"];
}

message E_PetStarvalue
{
	optional int32 m_id = 1[(yd_fieldoptions.field_cname) = "id"];
	optional int32 m_starvalue = 2[(yd_fieldoptions.field_cname) = "属性类型"];
	optional int32 m_starlv = 3[(yd_fieldoptions.field_cname) = "星级"];
	repeated E_PetStarvalueAttributeDesc m_attribute = 4[(yd_fieldoptions.field_cname) = "属性", (yd_fieldoptions.field_arysize) = 4];
	repeated string m_advance_type = 5[(yd_fieldoptions.field_cname) = "额外属性", (yd_fieldoptions.field_arysize) = 3, (yd_fieldoptions.field_bufsize) = 64];
	repeated E_PetStarvalueEquipDesc m_equip = 6[(yd_fieldoptions.field_cname) = "道具", (yd_fieldoptions.field_arysize) = 2];
}


message Sheet_PetStarvalue
{
	repeated E_PetStarvalue E_PetStarvalue_List = 1[(yd_fieldoptions.field_arysize)=256];
}

message E_PetWraithsMaterialDesc
{
	optional int32 m_exp = 1[(yd_fieldoptions.field_cname) = "经验值"];
	optional int64 m_item = 2[(yd_fieldoptions.field_cname) = "道具"];
}

message E_PetWraiths
{
	optional int32 m_id = 1[(yd_fieldoptions.field_cname) = "id"];
	optional int32 m_wraithsname = 2[(yd_fieldoptions.field_cname) = "妖魂名称"];
	optional int32 m_wraithspart = 3[(yd_fieldoptions.field_cname) = "妖魂部位"];
	optional int32 m_wraithsstar = 4[(yd_fieldoptions.field_cname) = "妖魂星级"];
	optional int32 m_wraithsquality = 5[(yd_fieldoptions.field_cname) = "妖魂品质"];
	optional int32 m_wraithsequip = 6[(yd_fieldoptions.field_cname) = "对应装备"];
	optional int32 m_propertylv = 7[(yd_fieldoptions.field_cname) = "升级类型"];
	optional int32 m_propertyadvance = 8[(yd_fieldoptions.field_cname) = "进阶类型"];
	optional int32 m_propertytop = 9[(yd_fieldoptions.field_cname) = "突破类型"];
	repeated E_PetWraithsMaterialDesc m_material = 10[(yd_fieldoptions.field_cname) = "升级", (yd_fieldoptions.field_arysize) = 3];
}


message Sheet_PetWraiths
{
	repeated E_PetWraiths E_PetWraiths_List = 1[(yd_fieldoptions.field_arysize)=256];
}

message E_PetWraithsvalueAttributeDesc
{
	optional int32 m_value = 1[(yd_fieldoptions.field_cname) = "值"];
	optional int32 m_type = 2[(yd_fieldoptions.field_cname) = "ID"];
}

message E_PetWraithsvalue
{
	optional int32 m_id = 1[(yd_fieldoptions.field_cname) = "id"];
	optional int32 m_wraithsvalue = 2[(yd_fieldoptions.field_cname) = "属性类型"];
	optional int32 m_lv = 3[(yd_fieldoptions.field_cname) = "等级"];
	optional int32 m_wraithsitem = 4[(yd_fieldoptions.field_cname) = "道具消耗"];
	optional int32 m_wraithsmun = 5[(yd_fieldoptions.field_cname) = "消耗数量"];
	repeated E_PetWraithsvalueAttributeDesc m_attribute = 6[(yd_fieldoptions.field_cname) = "属性", (yd_fieldoptions.field_arysize) = 6];
}


message Sheet_PetWraithsvalue
{
	repeated E_PetWraithsvalue E_PetWraithsvalue_List = 1[(yd_fieldoptions.field_arysize)=256];
}

message E_PetWraithslv
{
	optional int32 m_id = 1[(yd_fieldoptions.field_cname) = "妖魂升级id"];
	optional int32 m_lvexp = 2[(yd_fieldoptions.field_cname) = "升级所需经验"];
}


message Sheet_PetWraithslv
{
	repeated E_PetWraithslv E_PetWraithslv_List = 1[(yd_fieldoptions.field_arysize)=256];
}

message E_PetSmelt
{
	optional int32 m_id = 1[(yd_fieldoptions.field_cname) = "id"];
	optional int32 m_refinequality = 2[(yd_fieldoptions.field_cname) = "品质"];
	optional int32 m_refinestar = 3[(yd_fieldoptions.field_cname) = "星级"];
	optional int32 m_putmun = 4[(yd_fieldoptions.field_cname) = "放入妖魂数"];
	optional int32 m_smeltexp = 5[(yd_fieldoptions.field_cname) = "获得经验"];
	optional int32 m_smelt_box = 6[(yd_fieldoptions.field_cname) = "获得道具"];
}


message Sheet_PetSmelt
{
	repeated E_PetSmelt E_PetSmelt_List = 1[(yd_fieldoptions.field_arysize)=64];
}

message E_PetRefineconversion
{
	optional int32 m_itemid = 1[(yd_fieldoptions.field_cname) = "兑换道具"];
	optional int32 m_group = 2[(yd_fieldoptions.field_cname) = "组"];
	optional int32 m_conversionitem = 3[(yd_fieldoptions.field_cname) = "所需道具"];
	optional int32 m_conversionmun = 4[(yd_fieldoptions.field_cname) = "兑换数量"];
}


message Sheet_PetRefineconversion
{
	repeated E_PetRefineconversion E_PetRefineconversion_List = 1[(yd_fieldoptions.field_arysize)=32];
}

message E_PetStoveStoveDesc
{
	optional int32 m_mun = 1[(yd_fieldoptions.field_cname) = "值"];
	optional int32 m_value = 2[(yd_fieldoptions.field_cname) = "属性"];
}

message E_PetStove
{
	optional int32 m_stovelv = 1[(yd_fieldoptions.field_cname) = "等级"];
	optional int32 m_stoveexp = 2[(yd_fieldoptions.field_cname) = "升级所需经验"];
	optional int32 m_stovemax = 3[(yd_fieldoptions.field_cname) = "炼妖开放上限"];
	repeated E_PetStoveStoveDesc m_stove = 4[(yd_fieldoptions.field_cname) = "妖炉", (yd_fieldoptions.field_arysize) = 4];
}


message Sheet_PetStove
{
	repeated E_PetStove E_PetStove_List = 1[(yd_fieldoptions.field_arysize)=512];
}

message E_PetSuitAttributeDesc
{
	optional int32 m_value = 1[(yd_fieldoptions.field_cname) = "值"];
	optional int32 m_type = 2[(yd_fieldoptions.field_cname) = ""];
}

message E_PetSuit
{
	optional int32 m_id = 1[(yd_fieldoptions.field_cname) = "id"];
	optional int32 m_wraithsquality = 2[(yd_fieldoptions.field_cname) = "妖魂需求"];
	optional int32 m_piece = 3[(yd_fieldoptions.field_cname) = "套装件数"];
	optional int32 m_resonancetype = 4[(yd_fieldoptions.field_cname) = "共鸣属性"];
	optional int32 m_resonancevalue = 5[(yd_fieldoptions.field_cname) = "共鸣属性值"];
	repeated E_PetSuitAttributeDesc m_attribute = 6[(yd_fieldoptions.field_cname) = "属性", (yd_fieldoptions.field_arysize) = 5];
}


message Sheet_PetSuit
{
	repeated E_PetSuit E_PetSuit_List = 1[(yd_fieldoptions.field_arysize)=32];
}
